--- a/named_entity_recognition/flows/standard/flow.dag.yaml
+++ b/named_entity_recognition/flows/standard/flow.dag.yaml
@@ -23,7 +23,7 @@ nodes:
     text: ${inputs.text}
     entity_type: ${inputs.entity_type}
   provider: AzureOpenAI
-  connection: ai-cdeeshub256810338262
+  connection: aoai
   api: chat
   module: promptflow.tools.aoai
 - name: cleansing
